--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
   deploy:
-    runs-on: nodejs
+    runs-on: ubuntu-latest
     
     steps:
       - name: Deploy to App Engine
