--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "gcp-build": "npm run build"
   },
+  "main": "dist/chek-bank-app/index.html",
   "private": true,
   "dependencies": {
+    "@angular/cli": "~14.0.0",
     "@angular/animations": "^14.0.0",
     "@angular/cdk": "^14.0.0",
     "@angular/common": "^14.0.0",
@@ -26,7 +29,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
-    "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
