--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "chek-bank-app",
   "version": "0.0.0",
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": ">=6.0.0"
   },
   "scripts": {
     "ng": "ng",
