--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,11 @@
 runtime: nodejs16
 
 service: chek-bank-app
-env_variables:
-  BUCKET_NAME: "your-ng-app-bucket"
-handlers:
-  - url: /
-    static_files: dist/index.html
-    upload: dist/index.html
 
-  - url: /
-    static_dir: dist
+handlers:
+  - url: /(.*\.(js|css|svg|png)(|\.map))$
+  static_files: dist/\1
+  upload: dist/(.*)(|\.map)
+    - url: /.*
+  static_files: dist/index.html
+  upload: dist/.*
