--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,9 @@ handlers:
   - url: /(.*)
     static_files: dist/index.html
     upload: dist/index.html
+    
+  - url: /.*
+    script: main.app
 
 skip_files:
   - e2e/
