--- a/app.yaml
+++ b/app.yaml
@@ -1,23 +1,14 @@
-runtime: python27
-api_version: 1
-threadsafe: yes
+runtime: nodejs16
 service: chek-bank-app
+instance_class: F2
+
+env_variables:
+  BUCKET_NAME: "chek-bank-app-bucket"
 
 handlers:
-  # Serve all static files with urls ending with a file extension
-  - url: /(.*\..+)$
-    static_files: dist/\1
-    upload: dist/(.*\..+)$
-    # catch all handler to index.html
-  - url: /.*
+  - url: /
     static_files: dist/index.html
     upload: dist/index.html
 
-skip_files:
-  - e2e/
-  - node_modules/
-  - src/
-  - ^(.*/)?\..*$
-  - ^(.*/)?.*\.json$
-  - ^(.*/)?.*\.md$
-  - ^(.*/)?.*\.yaml$
+  - url: /
+    static_dir: dist
